--- a/jspractice/index.html
+++ b/jspractice/index.html
@@ -118,6 +118,7 @@
     }
      
     </script> 
+    <script src="function.js"></script>
 </body>
 </html>
 
@@ -201,4 +202,9 @@
     true
     str1.startsWith('s')
     true
+
+    user input
+    alert
+    prompt
+    confirm
  -->
